--- a/bt1550/style.css
+++ b/bt1550/style.css
@@ -36,8 +36,7 @@ textarea {
     height: 420px;
     margin-top: 10px;
     background-color: #cfc;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 0px auto;
     border: #E4E7E7 solid 2px;
     color: #303030;
     padding: 10px;
