--- a/bt2217/style.css
+++ b/bt2217/style.css
@@ -1,7 +1,8 @@
 body {
-    margin: 0px;
-    padding: 0px;
+    margin: 20px;
     font-family: arial;
+    width: 50%;
+    padding-left: 25%;
 }
 
 .container {
@@ -27,14 +28,32 @@ body {
 }
 
 .header .logo p {
-    width: 25%;
+    width: 100%;
+    color: white;
     background-color: red;
     text-align: center;
     font-weight: bold;
 }
 
-.header .logo h3 {
-    width: 75%
+.head .name {
+    width: 790px;
+    margin-left: 20px;
+    text-align: center;
+}
+
+.header .name {
+    width: 790px;
+    margin-left: 20px;
+    text-align: center;
+}
+
+.name h1 {
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.container .header .title {
+    display: flex;
 }
 
 .header .menu {
